--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <fieldset>
  <legend>Resumen</legend>
     <p >
-   esto es un ejemplo para el proyecto de administración de calidad.
+   esto es un ejemplo para la clase de Administración de calidad de software.
+
   </p>
 </fieldset>
 
